--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,13 +19,17 @@
     text-align: center;
     margin: auto;
     display: block;
-    height: 1.3em;
-    font-size: 2em;
-    width: 90%;
+    height: 1em;
+    font-size: 1em;
+    width: 100%;
     border: 0px;
     border-bottom: 1px black solid;
     background-color: transparent;
     margin-top: .2em
+}
+
+.custom-input < div {
+    padding: 0 !important;
 }
 
 .pop-up-button {
@@ -35,7 +39,7 @@
 
 .custom-select {
     display: block;
-    font-size: 16px;
+    font-size: .5em;
     font-family: sans-serif;
     font-weight: 400;
     color: #444;
