--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -28,10 +28,6 @@
     margin-top: .2em
 }
 
-.custom-input < div {
-    padding: 0 !important;
-}
-
 .pop-up-button {
     margin: auto;
     display: block;
@@ -43,7 +39,8 @@
     font-family: sans-serif;
     font-weight: 400;
     color: #444;
-    line-height: 1.3;
+    line-height: 1;
+    height: 2.5em;
     padding: .6em 1.4em .5em .8em;
     width: 100%;
     max-width: 100%; 
@@ -51,7 +48,7 @@
     margin: 0;
     border: 1px solid #aaa;
     box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
-    border-radius: .5em;
+    border-radius: .3em;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
