--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -40,7 +40,7 @@
     font-weight: 400;
     color: #444;
     line-height: 1;
-    height: 2.5em;
+    height: 2.5em !important;
     padding: .6em 1.4em .5em .8em;
     width: 100%;
     max-width: 100%; 
