fixing mobile friendlyness

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -19,7 +19,8 @@
     text-align: center;
     margin: auto;
     display: block;
-    height: 1.3em;
+    height: 1.05em;
+    line-height: normal;
     font-size: 1em;
     width: 100%;
     border: 0px;
